18 Jan 2025

Fixed a problem where you had to check "Include office days" even if you intended 0.
Fetch and display meal function refactored